fix UI distortion problems

--- a/src/app/[locale]/auth/styles.module.scss
+++ b/src/app/[locale]/auth/styles.module.scss
@@ -2,7 +2,7 @@
 
 .page {
   @include m.flex-center;
-  min-height: 100dvh;
+  min-height: 100%;
   padding: var(--spacing-xl);
   background-color: var(--color-bg);
 }
